// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data-type-folder create should create a folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`data-type-folder create should create a folder with parent 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`data-type-folder delete should delete a folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`data-type-folder delete should handle non-existent folder 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The folder could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`data-type-folder update should handle non-existent folder 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The folder could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`data-type-folder update should update a folder name 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
